// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toolbar reducer should handle GET_PORTFOLIO.SUCCESS 1`] = `
Object {
  "title": "$100.00",
}
`;

exports[`toolbar reducer should handle GET_PORTFOLIO.SUCCESS after hours 1`] = `
Object {
  "title": "$200.00",
}
`;
